Java版本的leetcode-1的题解，后续会慢慢完善

--- a/JavaStudy/两数之和.md
+++ b/JavaStudy/两数之和.md
@@ -1,4 +1,4 @@
-[1. 两数之和](https://leetcode.cn/problems/two-sum/)
+## **[1. 两数之和](https://leetcode.cn/problems/two-sum/)**
 
 给定一个整数数组 `nums` 和一个整数目标值 `target`，请你在该数组中找出 **和为目标值 ***`target`*  的那 **两个** 整数，并返回它们的数组下标。
 
@@ -31,3 +31,53 @@
 * `-10<sup>9</sup> <= nums[i] <= 10<sup>9</sup>`
 * `-10<sup>9</sup> <= target <= 10<sup>9</sup>`
 * **只会存在一个有效答案**
+
+**Java答案：**
+
+```java
+import java.util.Scanner;
+
+public class lc1 {
+    public static void main(String[] args) {
+    lc1 solution = new lc1();
+    //创建本类实例，用于调用twoSum
+        Scanner sc = new Scanner(System.in);
+        System.out.println("输入数组个数：");
+        int n = sc.nextInt();
+        System.out.println("输入数组：");//输入最后以数字要加空格
+        int[] nums = new int[n];
+        for(int i = 0; i < n; i++){
+               nums[i]=sc.nextInt();
+        }
+        System.out.println("输入目标值：");
+        int target = sc.nextInt();
+        int[] re=solution.twoSum(nums,target);
+
+        if(re.length>0){
+            System.out.println(re[0]+","+re[1]);
+        }
+        else{
+            System.out.println("Error");
+        }
+        sc.close();
+    }
+    public int[] twoSum(int[] nums, int target) {
+        // 方法用于在给定整数数组中找出两个数，使其和等于目标值，并返回它们的下标
+        for(int i = 0; i < nums.length; ++i){
+            // 外层循环遍历数组中的每个元素
+            for(int j = i+1; j < nums.length; ++j){
+                // 内层循环从 i + 1 位置开始遍历数组，确保不重复使用同一个元素两次
+                if(nums[i] + nums[j] == target){
+                    // 判断当前两个位置的元素之和是否等于目标值
+                    return new int[]{i, j};
+                    // 如果找到满足条件的两个元素，返回包含它们下标的数组
+                }
+            }
+        }
+        return new int[0];
+        //返回空数组
+    }
+}
+
+```
+
