今日更新进度

--- a/Vincent's study diary/每天的学习进度/241030-今天Java网课的进度.md
+++ b/Vincent's study diary/每天的学习进度/241030-今天Java网课的进度.md
@@ -1,4 +1,4 @@
-**进度概述**
+### **进度概述**
 
 ------
 
@@ -7,3 +7,5 @@
 2.今天又开始看Java网课了，看的是B站up主：黎曼的猜想   的视频：Java基础+进阶
 
 3.视频进度：从P1 01_Java语言的发展史看到了P18 18_基本数据类型，看是看了，但是就收获而言，是看了个寂寞，可能的原因是：我基本算得上是一个科班生，相当于重看一遍基础，有些枯燥，没有记下来什么东西，因为我觉得这些是可以查到的，就懒得记了（其实是抓不到视频讲的重点）
+
+4.我退出视频后发现，那个视频居然是两三年前的，后面就觉得可能不太跟得上现在的技术，后面就不看了，之后在今天（241031）在CSDN找到了一个个人博客，里面的内容又比B站的新一点，就打算跟他，其实基础都是差不多的，只是面对老旧的东西，心里总会有点膈应。并不是视频内容不好，他讲的很好。
