--- a/Vincent's study diary/每天的学习进度/241031-今天早上没有学其他东西因为下午有考试要复习.md
+++ b/Vincent's study diary/每天的学习进度/241031-今天早上没有学其他东西因为下午有考试要复习.md
@@ -5,4 +5,6 @@
 - 昨天下午才发通知，今天有考试，但是昨天顾着忙其他事情了，没时间复习，只能在今天早上学
 - 然后，面对十几张ppt，我想把它转换成PDF，我之前在网上找到了一个工具，叫：PDF24 Tools，网页链接是：[PDF24 Tools: 免费且易于使用的在线PDF工具](https://tools.pdf24.org/zh/)
 - 里面有很多在线转换工具，也有桌面程序，不过桌面程序功能少了很多，我更推荐在线转换。
+- 界面是这样的：
 
+![https://github.com/Vincent2024H95/My-study-note/blob/6acb535acf8bbf285e51fcfeffd1645ac347471b/Vincent's%20study%20diary/image/PDF.png]()
