--- a/Vincent's study diary/每天的学习进度/241101-今日Java学习进度.md
+++ b/Vincent's study diary/每天的学习进度/241101-今日Java学习进度.md
@@ -9,3 +9,74 @@
 2. 注释方式：/* 和 */包围
    1. 主要是注释较长的注释
 3. 注释方式：/**开头， */结尾，这类注释可以自动生成文档，用于类和方法的功能说明。
+
+------
+
+#### 二、Java的String类常用的几种方法
+
+```Java
+import java.util.Scanner;
+
+public class java24110102 {
+    public static void main(String[] args) {
+        Scanner sc = new Scanner(System.in);
+        String str1 = "";
+        System.out.println("str1 = "+str1);
+        str1 = sc.nextLine();
+        String str2="";
+        System.out.println("str2 = "+str2);
+        str2 = sc.nextLine();
+
+        System.out.println(str1.length());
+        //获取字符串的长度
+        System.out.println(str1.charAt(1));
+        //返回下标所在的cha值(字符)
+        System.out.println(str1.equals(str2));
+        //判断两个字符串内容是否相同
+        System.out.println(str1.equalsIgnoreCase(str2));
+        //不区分大小写判断两个字符串内容是否相同
+        System.out.println(str1.indexOf("b"));
+        //返回字串第一次出现的位置，没出现则返回-1
+        System.out.println(str1.lastIndexOf("c"));
+        //返回字串最后一次出现的位置，没出现返回-1
+        System.out.println(str1.startsWith("ab"));
+        //判断字符串是否以prefix为前缀开头
+        System.out.println(str1.endsWith("bc"));
+        //判断字符串是否以suffix为后缀结尾
+        System.out.println(str1.toLowerCase());
+        //返回字符串的小写形式
+        System.out.println(str1.toUpperCase());
+        //返回字符串的大写形式
+        System.out.println(str1.contains("abc"));
+        //判断是否包含字串s
+        System.out.println(str1.toCharArray());
+        //将此字符串转换为一个新的字符数组
+        System.out.println(str1.hashCode());
+        //返回字符串的哈希值
+    }
+}
+```
+
+得到的结果如下：
+
+```markdown
+str1 = 
+abcABCabc
+str2 = 
+abcabcabc
+9
+b
+false
+true
+1
+8
+true
+true
+abcabcabc
+ABCABCABC
+true
+abcABCabc
+-640212030
+```
+
+今天的学习就到这了，下午我还得当牛马
